# SA-MP-WebSockets

./: .gitignore  .travis.yml  LICENSE  README.md  pawn.json  pawn_websockets_version.inc  server.cfg  websockets.inc  ws.inc
examples/: client.pwn
gamemodes/: test.amx  test.pwn  wsclient.pwn  wsserver.pwn
pawn/include/: websockets.inc
pawno/include/: a_samp.inc  websockets.inc
src/: BasicManager.hpp  BasicManagerDelegate.cpp  BasicManagerDelegate.hpp  CMakeLists.txt  Constructor.hpp  IndexedVector.hpp  PAWN.cpp  PAWN.hpp  SynchronizationCall.cpp  SynchronizationCall.hpp  SynchronizationQueue.hpp  Utils.hpp  WebSocket.hpp  WebSocketClient.cpp  WebSocketClient.hpp  WebSocketClientManager.cpp  WebSocketClientManager.hpp  WebSocketClientNatives.cpp  WebSocketClientNatives.hpp  WebSocketServer.cpp  WebSocketServer.hpp  WebSocketServerManager.cpp  WebSocketServerManager.hpp  WebSocketServerNatives.cpp  WebSocketServerNatives.hpp  main.cpp
test/: test.pwn
